Back to JDK 17 because debugging in JDK 19 kept crashing, there must be a bug or something with the --enable-preview flag, removing it from the pom.xml and adding it as a VM option in the Run configuration fixes it